--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 discord-py = "^2.3.2"
 sechat = {git = "git@github.com:GingerIndustries/sechat.git", rev = "v2"}
+beautifulsoup4 = "^4.12.2"
 
 [build-system]
 requires = ["poetry-core"]
